# MarketMind

./: .env  .gitignore  README.md  hf_model_README.md  main.py  pyproject.toml
__MACOSX/: ._exports
batch/: cot_qwen_batch_state.json  summary_qwen_batch_state.json
checkpoint/: fetch_forum_checkpoint.json  fetch_news_iwencai_checkpoint.json  fetch_news_sina_checkpoint.json  fetch_stocks_checkpoint.json
config/: stocks.json
dataset/: README.md
docs/: ARCHITECTURE.md  Qwen_Batch_Call.md
scripts/: __init__.py  batch_qwen_cot_quotes_dataset.py  batch_qwen_summary_content.py  build_daily_stock_text_dataset.py  build_quotes_7d_dataset.py  build_quotes_7d_eval_dataset.py  build_quotes_summary_5d_dataset.py  csv_io.py  export_daily_news_report_overlap.py  export_monthly_symbol_counts.py  export_pg_tables_to_csv.py  fetch_content_to_disk.py  fetch_forum_all.py  fetch_forum_test.py  fetch_market_data.py  fetch_news_content_to_disk.py  fetch_news_eastmoney.py  fetch_report_content.py  fetch_report_content_to_disk.py  fetch_stocks.py  import_all_to_pg.py  import_eastmoney_news_to_pg.py  import_forum_to_pg.py  import_sina_to_pg.py  quotes_db.py  sample_qwen_cot_one.py  stock_daily_dashboard.py  stock_universe.py  test_qwen_api_key.py
src/: app.py  live_fetch.py
src/static/: app.js  (+1 more)
test/: eval_quotes_summary_5d_202603_vllm.py  eval_quotes_summary_5d_vllm.py  eval_quotes_summary_5d_vllm_no_text.py
thesis/: README_MARKETMIND.md  latexmkrc  main.tex  ustcsetup.tex
train/: accelerate_deepspeed_zero3.yaml  run_grpo_8gpu.sh  sample_grpo_generations.py  train_grpo_qwen.py
(+45 files in other folders)
